--- a/index.css
+++ b/index.css
@@ -1,84 +1,62 @@
 * {
     margin: 0;
     padding: 0;
+    cursor: pointer;
 }
 
 body {
+    width: 100%;
+    height: 100vh;
     background-color: black;
-    display: flex;
-    flex-direction: row;
+    color: white;
+    text-align: center;
+    font-family: monospace;
 }
 
-#background {
-    width: 1200px;
-    height: 680px;
-    background-color: black;
-}
-
-#ship {
-    background-image: url('/img/ship.png');
-    width: 50px;
-    height: 36px;
-    position: absolute;
-    top: 620px;
-    left: 575px;
+#playing {
+    color: white;
+    width: 80%;
 }
 
 #alien1 {
-    background-image: url('/img/alien1.png');
-    width: 50px;
-    height: 50px;
+    background-image: url("img/alien1.png");
+    width: 3.7%;
+    height: 6vh;
     position: absolute;
 }
 
 #alien2 {
-    background-image: url('/img/alien2.png');
-    width: 50px;
-    height: 50px;
+    background-image: url("img/alien2.png");
+    width: 3.7%;
+    height: 6vh;
     position: absolute;
 }
 
-#bullet {
-    width: 10px;
-    height: 10px;
-    background-color: white;
+#ship {
+    background-image: url("img/ship.png");
+    width: 3.7%;
+    height: 5vh;
     position: absolute;
+    left: 50%;
+    top: 90vh;
 }
 
 #stats {
-    background-color: black;
-    color: white;
-    font-family: monospace;
-    margin-top: 30px;
+    text-align: left;
+    padding-right: 10px;
+    width: 20%;
 }
 
-h1 {
-    color: white;
-    font-family: monospace;
-    text-align: center;
-    margin-top: 10px;
+#bullet {
+    background-color: white;
+    width: 0.7%;
+    height: 1.2vh;
+    position: absolute;
 }
 
-.intro {
-    opacity: 0;
-}
-
-#intro {
-    text-align: center;
-    margin-top: 50px;
-}
-
-p {
-    color: white;
-    font-family: monospace;
-    font-size: 15px;
-    margin-top: 10px;
-}
-
-#win, #lose {
-    color: white;
-    margin-top: 200px;
-    font-size: 15px;
-    font-family: monospace;
-    text-align: center;
+#enemybull {
+    background-color: red;
+    width: 0.7%;
+    height: 1.2vh;
+    position: absolute;
 }
